<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_ripple_box"
    android:padding="8dp">

    <TextView
        android:id="@+id/cloth_num_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <ImageView
        android:id="@+id/horse_img"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cloth_num_txt"
        app:layout_constraintStart_toEndOf="@+id/cloth_num_txt"
        app:layout_constraintTop_toTopOf="@+id/cloth_num_txt"
        app:srcCompat="@drawable/ic_horse" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/horse_img"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hale Bopp" />

    <TextView
        android:id="@+id/odds_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/form_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_txt"
        android:textColor="@color/blue"
        tools:text="5/2" />

    <TextView
        android:id="@+id/form_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="Form: 6-0233"
        app:layout_constraintStart_toEndOf="@+id/horse_img"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/handicap_colon"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/horse_img"
        app:layout_constraintTop_toBottomOf="@+id/form_txt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/days_since_last_run_colon"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/horse_img"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sex_colon"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/horse_img"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/foaled_colon"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horse_img"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/extra_info_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="
        textView5,textView6,textView7,textView8,
        handicap_txt,days_run_txt,sex_txt,foaled_txt"/>

    <TextView
        android:id="@+id/handicap_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/form_txt" />

    <TextView
        android:id="@+id/days_run_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/handicap_txt" />

    <TextView
        android:id="@+id/sex_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/days_run_txt" />

    <TextView
        android:id="@+id/foaled_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/sex_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>